bug 257511 : In UTF-8 locales, date/time with non-ASCII characters become 'null' strings (r=smontagu, sr=neil) (add back '##PLATFORM' to the Unix locale code)